# aag-weather

./: .coveragerc  .dockerignore  .flaskenv  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  config.env  config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  weather.ecsv
.github/workflows/: create-release.yaml  pythontest.yaml
.junie/: guidelines.md
aag/: version.py  weather.py
aag/utils/: storage.py
docker/: Dockerfile  build-image.sh  cloudbuild.yaml  docker-compose.yaml  entrypoint.sh  environment.yaml
docs/: conf.py  index.md  index.rst
examples/: Minimal DataFrame Plotting Example.ipynb
scripts/: plot-weather.py  read-aag.py  serve-aag.py
src/aag/: __init__.py  cli.py  commands.py  plotter.py  server.py  settings.py  weather.py
tests/: conftest.py  test_weather.py
