[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[sphinx-apidocs]
packages =
    aag-weather-reader

[tool:pytest]
python_files= test_*.py
norecursedirs= scripts
addopts= --doctest-modules
doctest_optionflags= ELLIPSIS NORMALIZE_WHITESPACE ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL
filterwarnings =
    ignore:elementwise == comparison failed:DeprecationWarning
    ignore::pytest.PytestDeprecationWarning
doctest_plus = enabled

[metadata]
author = PANOPTES Team
author_email = info@projectpanoptes.org
description = Stand-alone Lunatico AAG weather station.
edit_on_github = True
github_project = panoptes/aag-weather
keywords = astronomy aag weather station
license = MIT
long_description = A stand-alone reader and Flask JSON server for the Lunatico AAG weather station, including anemometer.
name = aag-weather
package_name = aagweather
url = http://github.com/panoptes/aag-weather
